# SofaROSConnector

./: CMakeLists.txt  README.txt
ZyColladaLoader/: AssimpColladaLoader.cpp  AssimpColladaLoader.h  CMakeLists.txt  ColladaTransformHelper.cpp  ColladaTransformHelper.h  ZyColladaLoader.cpp  ZyColladaLoader.h  ZyColladaLoaderConfig.cmake.in  ZyColladaLoader_broken_merge.cpp  config.h  initPlugin.cpp  relative_transforms_broken_23052016.txt
ZyColladaLoader/scenes/: KR16_mit_Werkzeug_und_Werkstueck_2_bodenGhost.dae  Powerball.scn  Powerball_noTool.dae  Powerball_noTool.scn  Powerball_und_SVH.scn  hand.scn  hand_robot_truphysics_euler.dae  kr16-w-250_iterations_GPU_2_suche.scn
ZyColladaLoader/unzip/: CMakeLists.txt  Config.cmake.in
ZyGripping/: CMakeLists.txt  ZyGripping.cpp  ZyGripping.h  ZyGrippingConfig.cmake.in  initZyGripping.cpp  initZyGripping.h
ZyGrippingHandler/: CMakeLists.txt  ZyGrippingHandler.cpp  ZyGrippingHandler.h  ZyGrippingHandlerConfig.cmake.in  init_ZyGrippingHandler.h
ZyMultiThreading/: CMakeLists.txt  MultiThread_Scheduler.cpp  MultiThread_Scheduler.h  TaskScheduler.cpp  TaskScheduler.h  TaskSchedulerBoostPool.cpp  TaskSchedulerBoostPool.h  TaskSchedulerBoostPool.inl  Tasks.cpp  Tasks.h  Tasks.inl  WorkerThreadIface.cpp  WorkerThreadIface.h  WorkerThread_Pool.cpp  WorkerThread_Pool.h  WorkerThread_Pool.inl  WorkerThread_SingleTask.cpp  WorkerThread_SingleTask.h  ZyMultiThreadingConfig.cmake.in  config_multithreading.h
ZyROSConnectionManager/: CMakeLists.txt  ZyROSConnectionManager.cpp  ZyROSConnectionManager.h  ZyROSConnectionManagerConfig.cmake.in  ZyROSConnectorBindingsConfig.cmake.in  ZyROSConnectorServiceClient.cpp  generate_message_and_service_files.py  initZyROSConnectionManager.cpp  initZyROSConnectionManager.h  list_ros_message_types.sh
ZyROSConnectionManager/ZyROSConnector_test/: ArrayOfFloats.h  ArrayOfFloatsRequest.h  ArrayOfFloatsResponse.h  CMakeLists.txt  TruRosConnectorTest.cpp  ZyROSConnectorTest.cpp  ZyROSConnectorTest.cpp~HEAD
ZyROSConnectionManager/doc/: ROSConnectorDoku.tex  connectToSubscriberSignalExample.txt
ZyROSConnectionManager/examples/: simple_box_test_ROS.scn
ZyROSConnector/: CMakeLists.txt  Win32_Process_Control.txt  ZyROSConnector.cpp  ZyROSConnector.h  ZyROSConnectorConfig.cmake.in  ZyROSConnectorServiceClient.cpp  ZyROSConnectorServiceClient.h  ZyROSConnectorServiceClient.inl  ZyROSConnectorServiceServer.cpp  ZyROSConnectorServiceServer.h  ZyROSConnectorServiceServer.inl  ZyROSConnectorTopicPublisher.cpp  ZyROSConnectorTopicPublisher.h  ZyROSConnectorTopicPublisher.inl  ZyROSConnectorTopicSubscriber.cpp  ZyROSConnectorTopicSubscriber.h  ZyROSConnectorTopicSubscriber.inl  ZyROSConnectorWorkerThread.cpp  ZyROSConnectorWorkerThread.h  ZyROSTopicListener_Bool.cpp  ZyROSTopicListener_Bool.h  ZyROSTopicListener_JointState.cpp  ZyROSTopicListener_JointState.h  ZyROSTopicListener_LogMsgs.cpp  ZyROSTopicListener_LogMsgs.h  ZyROSTopicPublisher_Float32.cpp  ZyROSTopicPublisher_Float32.h  ZyROSTopicPublisher_Float32MultiArray.cpp  ZyROSTopicPublisher_Float32MultiArray.h  init_ZyROSConnector.h
ZyROSKinematics/: CMakeLists.txt  ZyRosKinematics.cpp  ZyRosKinematics.h  ZyRosKinematicsConfig.cmake.in  initZyRosKinematics.cpp  initZyRosKinematics.h
ZyROSKinematics/examples/UR10/: Readme.txt  UR10.scn  test.bag
ZyROSPublishingHandler/: CMakeLists.txt  ZyROSPublishingHandler.cpp  ZyROSPublishingHandler.h  init_ZyROSPublishingHandler.h
ZyROSSubscriptionHelper/: CMakeLists.txt  ZyROSSubscriptionHelper.cpp  ZyROSSubscriptionHelper.h  init_ZyROSSubscriptionHelper.h
ZySOFAControllers/: ArbitraryController.cpp  ArbitraryController.h  ArticulatedHierarchyBVHController.cpp  ArticulatedHierarchyBVHController.h  ArticulatedHierarchyController.cpp  ArticulatedHierarchyController.h  CMakeLists.txt  RobotController.cpp  RobotController.h  ZyColladaToolHandler.cpp  ZyColladaToolHandler.h  ZyColladaToolHandler.inl  ZySOFAControllersConfig.cmake.in  initZySOFAControllers.cpp
ZySimulationAnalyzer/: CMakeLists.txt  ZyROSSimulationAnalyzer.cpp  ZyROSSimulationAnalyzer.h  ZySimulationAnalyzerConfig.cmake.in  initZyROSSimulationAnalyzer.cpp  initZyROSSimulationAnalyzer.h
ZySimulationAnalyzerHandler/: CMakeLists.txt  ZySimulationAnalyzerHandler.cpp  ZySimulationAnalyzerHandler.h  ZySimulationAnalyzerHandlerConfig.cmake.in  init_ZySimulationAnalyzerHandler.h
ZySimulationLoop/: CMakeLists.txt  ZyPhysicsAnimationLoop.cpp  ZyPhysicsAnimationLoop.h  ZySimulationLoopConfig.cmake.in  initZySimulationLoop.cpp  initZySimulationLoop.h
ZyVelocityApproximation/: CMakeLists.txt  TruVelocityApproximator_cpp.bak_withSmoothingForIiwa  TruVelocityApproximator_h.bak_withSmoothingForIiwa  ZyVelocityApproximationConfig.cmake.in  ZyVelocityApproximator.cpp  ZyVelocityApproximator.h  initZyVelocityApproximation.cpp  initZyVelocityApproximation.h
ZyVelocityApproximationHandler/: CMakeLists.txt  ZyVelocityApproximationHandler.cpp  ZyVelocityApproximationHandler.h  ZyVelocityApproximationHandlerConfig.cmake.in  init_ZyVelocityApproximationHandler.h
assimp-3.0.1270/: CMakeLists.txt
assimp-3.0.1270/code/: Assimp.cpp  AssimpPCH.cpp  AssimpPCH.h  BaseImporter.cpp  CMakeLists.txt  ColladaHelper.h  ColladaLoader.cpp  ColladaLoader.h  ColladaParser.cpp  ColladaParser.h  Converter.cpp  Converter.h  DefaultIOStream.cpp  Exporter.cpp  Importer.cpp  ImporterRegistry.cpp  JoinVerticesProcess.cpp  LWOMaterial.cpp  ProcessHelper.cpp  STEPFile.h  SpatialSort.cpp  Vertex.h  assimpConfig.cmake.in
assimp-3.0.1270/include/assimp/: Exporter.hpp  Importer.hpp  material.h  matrix4x4.h  matrix4x4.inl  mesh.h  scene.h
assimp-3.0.1270/samples/SimpleOpenGL/: CMakeLists.txt  Sample_SimpleOpenGL.c
assimp-3.0.1270/samples/SimpleTexturedOpenGL/: CMakeLists.txt
assimp-3.0.1270/test/: CMakeLists.txt
assimp-3.0.1270/test/unit/: CCompilerTest.c
assimp-3.0.1270/tools/assimp_cmd/: CMakeLists.txt  Main.cpp  WriteDumb.cpp  assimp_cmd.rc
cmake/Modules/: FindLog4cxx.cmake  FindROS.cmake
hashgen/: CMakeLists.txt  cryptohash.cpp  cryptohash.h  hashgenConfig.cmake.in
(+25 files in other folders)
