project(SofaROSConnector)

set(CMAKE_VERBOSE_MAKEFILE ON)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)

message(STATUS "Adding SofaROSConnector plugins.")
add_subdirectory(ZySOFAControllers)

add_subdirectory(ZyColladaLoader)
add_subdirectory(ZyMultiThreading)
add_subdirectory(ZyGripping)
add_subdirectory(ZyGrippingHandler)
add_subdirectory(ZyVelocityApproximation)
add_subdirectory(ZyVelocityApproximationHandler)
add_subdirectory(ZyROSConnector)
add_subdirectory(ZyROSConnectionManager)
add_subdirectory(ZySimulationAnalyzerHandler)
add_subdirectory(ZySimulationAnalyzer)
add_subdirectory(ZyROSSubscriptionHelper)
add_subdirectory(ZyROSPublishingHandler)
add_subdirectory(ZyROSKinematics)
